feat: parse different MPDU types

--- a/packages/zwave-js/package.json
+++ b/packages/zwave-js/package.json
@@ -42,6 +42,10 @@
       "types": "./build/Values.d.ts",
       "default": "./build/Values.js"
     },
+    "./Zniffer": {
+      "types": "./build/Zniffer.d.ts",
+      "default": "./build/Zniffer.js"
+    },
     "./package.json": "./package.json"
   },
   "files": [
